fix testing