@@ -22,6 +22,34 @@ This project includes comprehensive unit tests for all backend services and cont
 
 ## Running Tests
 
+### ⚠️ If Maven Tests Are Not Working
+
+The `mvn test` command may fail due to dependency issues. Here are the working alternatives:
+
+#### **Option 1: Use Your IDE (Recommended)**
+- **IntelliJ IDEA**: Right-click on `src/test/java` → "Run All Tests"
+- **VS Code**: Install "Test Runner for Java" extension, then use "Java: Run Tests"
+- **Eclipse**: Right-click test folder → "Run As" → "JUnit Test"
+
+#### **Option 2: Run Individual Test Classes**
+```bash
+# Test specific services (these usually work)
+mvn test -Dtest=HolidayServiceTest
+mvn test -Dtest=CountryServiceTest
+mvn test -Dtest=AudienceServiceTest
+```
+
+#### **Option 3: Skip Problematic Tests**
+```bash
+# Skip integration and controller tests
+mvn test -Dtest=!*ControllerTest,!*IntegrationTest
+
+# Or just compile without testing
+mvn compile -DskipTests
+```
+
+### Standard Maven Commands
+
 ### Run All Tests
 ```bash
 mvn test
@@ -105,14 +133,201 @@ Tests use:
 - Date-specific scenarios for holiday calculations
 - Multilingual test cases (English/Turkish)
 
+## Alternative Test Running Methods
+
+### If `mvn test` doesn't work, try these alternatives:
+
+#### 1. Using IDE Test Runner
+**IntelliJ IDEA:**
+- Right-click on `src/test/java` folder → "Run All Tests"
+- Right-click on specific test class → "Run [TestClassName]"
+- Use the green play button next to test methods
+
+**VS Code:**
+- Install "Test Runner for Java" extension
+- Use Command Palette (Ctrl+Shift+P) → "Java: Run Tests"
+- Click the test icon in the editor gutter
+
+**Eclipse:**
+- Right-click on test folder → "Run As" → "JUnit Test"
+- Use Run → Run As → JUnit Test from menu
+
+#### 2. Using Gradle Wrapper (Alternative)
+If Maven is causing issues, you can convert to Gradle:
+```bash
+# Create gradle wrapper
+gradle wrapper
+
+# Run tests with Gradle
+./gradlew test
+```
+
+#### 3. Running Individual Test Classes
+```bash
+# Run specific service tests
+mvn test -Dtest=HolidayServiceTest
+mvn test -Dtest=CountryServiceTest
+mvn test -Dtest=AudienceServiceTest
+
+# Run without problematic tests
+mvn test -Dtest=!ChatControllerTest,!HolidayControllerTest
+```
+
+#### 4. Skip Failing Tests Temporarily
+```bash
+# Skip tests during build
+mvn compile -DskipTests
+
+# Or build without running tests
+mvn package -DskipTests=true
+```
+
+#### 5. Fix Dependencies Before Testing
+```bash
+# Clean and recompile
+mvn clean compile
+
+# Install dependencies
+mvn dependency:resolve
+
+# Then try tests again
+mvn test
+```
+
 ## Troubleshooting
 
-### Common Issues:
-1. **Spring Boot version compatibility**: Ensure MockitoBean imports are correct
-2. **Date-sensitive tests**: Some tests use current date, ensure system time is correct
-3. **Memory issues**: Run with `-Xmx512m` if needed
+### Current Known Issues:
 
-### Test Debugging:
-- Add `@Disabled` to skip problematic tests temporarily
-- Use `System.out.println()` for debugging output
-- Check test logs for detailed error messages
+#### 1. **Missing AI Service Bean**
+**Error:** `No qualifying bean of type 'IntelligentHolidayAiService'`
+**Solution:**
+```java
+// Add this to test configuration or use @MockBean
+@TestConfiguration
+public class TestConfig {
+    @Bean
+    @Primary
+    public IntelligentHolidayAiService mockAiService() {
+        return Mockito.mock(IntelligentHolidayAiService.class);
+    }
+}
+```
+
+#### 2. **Application Context Loading Issues**
+**Error:** `Failed to load ApplicationContext`
+**Solutions:**
+- Ensure all required dependencies are in the classpath
+- Check if `application-test.properties` exists with test configurations
+- Verify that all `@Service` and `@Component` classes are properly annotated
+
+#### 3. **Unnecessary Stubbing Warnings**
+**Error:** `UnnecessaryStubbing detected`
+**Solutions:**
+```java
+// Use lenient stubbing for complex scenarios
+lenient().when(mockService.someMethod()).thenReturn(result);
+
+// Or remove unused stubs
+// when(mockService.unusedMethod()).thenReturn(something); // Remove this
+```
+
+#### 4. **MockMvc Not Available**
+**Error:** `No qualifying bean of type 'MockMvc'`
+**Solutions:**
+```java
+// Ensure proper test annotations
+@WebMvcTest(HolidayController.class)
+// or
+@SpringBootTest
+@AutoConfigureTestDatabase
+@AutoConfigureMockMvc
+public class YourTestClass {
+    // test implementation
+}
+```
+
+### General Troubleshooting Steps:
+
+1. **Check Java Version**: Ensure you're using Java 17+
+```bash
+java -version
+mvn -version
+```
+
+2. **Clean Project**:
+```bash
+mvn clean
+mvn dependency:purge-local-repository
+mvn compile
+```
+
+3. **Check Dependencies**:
+```bash
+mvn dependency:tree
+mvn dependency:analyze
+```
+
+4. **Run Single Test**:
+```bash
+mvn test -Dtest=AudienceServiceTest#getAllAudiences_ShouldReturnAllAudiences
+```
+
+5. **Enable Debug Mode**:
+```bash
+mvn test -X -Dtest=YourTestClass
+```
+
+6. **Memory Issues**:
+```bash
+export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m"
+mvn test
+```
+
+### Working Test Examples:
+
+If the full test suite fails, try running these individual working tests:
+```bash
+# Service layer tests (usually work)
+mvn test -Dtest=AudienceServiceTest
+mvn test -Dtest=CountryServiceTest
+mvn test -Dtest=HolidayServiceTest
+
+# Skip integration tests if they're problematic
+mvn test -Dtest=!*IntegrationTest
+```
+
+### Test Configuration Tips:
+
+1. **Create test-specific application.properties**:
+```properties
+# src/test/resources/application-test.properties
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.ai.ollama.base-url=http://localhost:11434
+logging.level.com.emre.holidayapi=DEBUG
+```
+
+2. **Use test profiles**:
+```java
+@SpringBootTest
+@ActiveProfiles("test")
+public class YourTestClass {
+    // test implementation
+}
+```
+
+### IDE-Specific Solutions:
+
+#### IntelliJ IDEA:
+- File → Invalidate Caches and Restart
+- Re-import Maven project
+- Check Project Structure → Modules → Test folders are marked correctly
+
+#### VS Code:
+- Reload window (Ctrl+Shift+P → "Developer: Reload Window")
+- Clean workspace: Command Palette → "Java: Reload Projects"
+
+#### Eclipse:
+- Project → Clean → Select your project
+- Refresh project (F5)
+- Maven → Reload Project
